corregir lógica de entregables evitando duplicados y agregar listarSoloSubidos